fix: enhance event image display with hover effects and flex alignment

--- a/chamber/styles/discover-medium.css
+++ b/chamber/styles/discover-medium.css
@@ -123,7 +123,21 @@
     }
 
     .event figure {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         width: 25em;
+    }
+
+    .event img{
+
+        transition: width 0.5s ease, height 0.5s ease;
+    }
+
+    .event img:hover{
+        width: 105%;
+        height: 105%;
+
     }
 
     .event>p {
